[gd_scene load_steps=19 format=3 uid="uid://v2b55h11rppm"]

[ext_resource type="Script" path="res://entities/player_mech/player_mech.gd" id="1_8j82k"]
[ext_resource type="Resource" uid="uid://cx82xnrvhq870" path="res://resources/mech_parts/chest/standard_chest.tres" id="2_56d0m"]
[ext_resource type="PackedScene" uid="uid://snw1ev62d7aw" path="res://components/energy_component.tscn" id="2_g845v"]
[ext_resource type="PackedScene" uid="uid://c08n456hikpba" path="res://components/health_component.tscn" id="2_pdrve"]
[ext_resource type="Resource" uid="uid://bs0gh5h4r56gc" path="res://resources/mech_parts/head/standard_head.tres" id="3_2lo60"]
[ext_resource type="Resource" uid="uid://bsv3pdce0r3us" path="res://resources/mech_parts/arms/machine_gun_arm.tres" id="4_22tnf"]
[ext_resource type="Script" path="res://UI/DebugUI.gd" id="4_xbcny"]
[ext_resource type="Resource" uid="uid://hcvifldd2js1" path="res://resources/mech_parts/legs/standard_legs.tres" id="5_tv1yi"]
[ext_resource type="Script" path="res://resources/mech_parts/mech_build.gd" id="6_fx21j"]
[ext_resource type="PackedScene" uid="uid://ch0m8i08wkpak" path="res://UI/pause_menu.tscn" id="9_q3prr"]
[ext_resource type="FontFile" uid="uid://dpm4dokao617s" path="res://assets/fonts/FerriteCoreDX-Light.ttf" id="11_42rwg"]
[ext_resource type="Script" path="res://entities/player_mech/UI.gd" id="11_cmofo"]
[ext_resource type="Texture2D" uid="uid://derq7j577m4jq" path="res://assets/reticles/crosshair007.png" id="11_kp0kp"]

[sub_resource type="Resource" id="Resource_7srlk"]
script = ExtResource("6_fx21j")
head = ExtResource("3_2lo60")
chest = ExtResource("2_56d0m")
left_arm = ExtResource("4_22tnf")
right_arm = ExtResource("4_22tnf")
legs = ExtResource("5_tv1yi")

[sub_resource type="BoxShape3D" id="BoxShape3D_bxa8a"]
size = Vector3(0.7, 1.6, 0.7)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cfry"]
bg_color = Color(0.141176, 0.141176, 0.141176, 0.501961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jv7kh"]

[sub_resource type="Theme" id="Theme_4pfjt"]
Label/fonts/font = ExtResource("11_42rwg")
ProgressBar/styles/background = SubResource("StyleBoxFlat_0cfry")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_jv7kh")

[node name="PlayerMech" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
script = ExtResource("1_8j82k")
build = SubResource("Resource_7srlk")

[node name="EnergyComponent" parent="." instance=ExtResource("2_g845v")]
max_energy = 200.0

[node name="HealthComponent" parent="." instance=ExtResource("2_pdrve")]
max_health = 1000.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_bxa8a")

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="Head" type="Node3D" parent="Neck"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Neck/Head"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head"]

[node name="LeftWeapon" type="Node3D" parent="Neck/Head"]
unique_name_in_owner = true

[node name="RightWeapon" type="Node3D" parent="Neck/Head"]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DebugUI" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 22
script = ExtResource("4_xbcny")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/DebugUI"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/DebugUI/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="UI" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("health_component", "energy_component")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_4pfjt")
script = ExtResource("11_cmofo")
health_component = NodePath("../../HealthComponent")
energy_component = NodePath("../../EnergyComponent")

[node name="EnergyUI" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 112.0
grow_vertical = 0
theme_override_constants/margin_left = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/EnergyUI"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/EnergyUI/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/UI/EnergyUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ENERGY"

[node name="EnergyNumber" type="Label" parent="CanvasLayer/UI/EnergyUI/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00000"

[node name="EnergyBar" type="ProgressBar" parent="CanvasLayer/UI/EnergyUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 8)
layout_mode = 2
step = 1.0
value = 50.0
show_percentage = false

[node name="HealthUI" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/HealthUI"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/HealthUI/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/UI/HealthUI/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "HEALTH"

[node name="HealthNumber" type="Label" parent="CanvasLayer/UI/HealthUI/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00000"

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/UI/HealthUI/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 8)
layout_mode = 2
step = 1.0
value = 50.0
show_percentage = false

[node name="Crosshair" type="CenterContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/UI/Crosshair"]
layout_mode = 2
texture = ExtResource("11_kp0kp")

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("9_q3prr")]
visible = false
